[gd_scene load_steps=17 format=3 uid="uid://dt1s3ldfb531w"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_va8dm"]
[ext_resource type="AudioStream" uid="uid://dsgtnqjj68ji7" path="res://Assets/Audio/button.wav" id="2_r3x54"]
[ext_resource type="Texture2D" uid="uid://dx4gqt0bxxpfn" path="res://Assets/Images/Visuals/background.png" id="3_qerhp"]
[ext_resource type="Texture2D" uid="uid://b4jkvhungs654" path="res://Assets/Images/Visuals/text.png" id="4_sm61m"]
[ext_resource type="Texture2D" uid="uid://bclbhbbhojy1f" path="res://Assets/Images/Buttons/play.png" id="5_i3b0a"]
[ext_resource type="Texture2D" uid="uid://bokoq785oia5x" path="res://Assets/Images/Buttons/options.png" id="6_6ve6m"]
[ext_resource type="Texture2D" uid="uid://b0qt42klxt6ke" path="res://Assets/Images/Buttons/pressed_play.png" id="6_rqwwg"]
[ext_resource type="Texture2D" uid="uid://dmbi6j2q4i447" path="res://Assets/Images/Buttons/credits.png" id="7_8g8a8"]
[ext_resource type="FontFile" uid="uid://djy0j2qufjfsy" path="res://Assets/04B_03__.TTF" id="8_0whyq"]
[ext_resource type="Texture2D" uid="uid://c0i7o73njqqsn" path="res://Assets/Images/Buttons/pressed_options.png" id="8_krjcj"]
[ext_resource type="Texture2D" uid="uid://conm818qx16nm" path="res://Assets/Images/Buttons/pressed_credits.png" id="10_pe220"]
[ext_resource type="VideoStream" uid="uid://teiosf14grxb" path="res://Assets/Video/intro.ogv" id="12_5omsq"]

[sub_resource type="LabelSettings" id="LabelSettings_vilfk"]
font = ExtResource("8_0whyq")
font_size = 24

[sub_resource type="Animation" id="Animation_eecj6"]
resource_name = "Fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4cxsq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6evuk"]
_data = {
"Fade_out": SubResource("Animation_eecj6"),
"RESET": SubResource("Animation_4cxsq")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_va8dm")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_r3x54")
volume_db = 5.0

[node name="Bg" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(321, 321)
texture = ExtResource("3_qerhp")

[node name="Title" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(320, 100)
scale = Vector2(2, 2)
texture = ExtResource("4_sm61m")

[node name="Play" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 282.0
offset_top = 216.0
offset_right = 355.0
offset_bottom = 251.0
size_flags_horizontal = 4
texture_normal = ExtResource("5_i3b0a")
texture_hover = ExtResource("6_rqwwg")
ignore_texture_size = true

[node name="Options" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 269.0
offset_top = 307.0
offset_right = 371.0
offset_bottom = 342.0
size_flags_horizontal = 4
texture_normal = ExtResource("6_6ve6m")
texture_hover = ExtResource("8_krjcj")
ignore_texture_size = true

[node name="Credits" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 269.0
offset_top = 262.0
offset_right = 370.0
offset_bottom = 298.0
size_flags_horizontal = 4
texture_normal = ExtResource("7_8g8a8")
texture_hover = ExtResource("10_pe220")
ignore_texture_size = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 159.0
offset_top = 343.0
offset_right = 480.0
offset_bottom = 471.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.375
anchor_right = 1.0
anchor_bottom = 0.773
offset_left = -0.0620008
offset_right = -2.0
offset_bottom = 0.0559921
text = "Phoenix - Programmer
Petros Katiforis - Artist"
label_settings = SubResource("LabelSettings_vilfk")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.148
anchor_right = 0.972
anchor_bottom = 0.336
offset_left = 0.0240002
offset_top = 0.0559998
offset_right = -0.0120239
offset_bottom = -0.00800323
text = "Credits
"
label_settings = SubResource("LabelSettings_vilfk")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6evuk")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
visible = false
offset_right = 639.0
offset_bottom = 644.0
color = Color(0, 0, 0, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = 1.0
offset_top = 12.0
offset_right = 1089.0
offset_bottom = 1100.0
scale = Vector2(0.59, 0.58)
stream = ExtResource("12_5omsq")
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
